--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/m2owe0swaqa6/
-    - /bin/cp -R /home/m2owe0swaqa6/repo/ $DEPLOYPATH
+    - /bin/cp -r /home/m2owe0swaqa6/repo $DEPLOYPATH
