--- a/laravel/package.json
+++ b/laravel/package.json
@@ -21,6 +21,8 @@
         "tailwindcss": "^2.2.19"
     },
     "dependencies": {
+        "cross-env": "^7.0.3",
         "gulp": "^4.0.2"
+
     }
 }
