--- a/laravel/package.json
+++ b/laravel/package.json
@@ -24,5 +24,14 @@
         "cross-env": "^7.0.3",
         "gulp": "^4.0.2"
 
+    },
+    "scripts": {
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     }
 }
