--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -10,12 +10,14 @@
         "daltcore/lara-pdf-merger": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.4",
+        "jorenvanhocht/laravel-share": "^4.2",
         "laravel/framework": "^8.65",
         "laravel/jetstream": "^2.4",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.10",
+        "riverskies/laravel-mobile-detect": "^1.3",
         "shippo/shippo-php": "^2.0",
         "swiftmailer/swiftmailer": "^6.0"
     },
